# qpdftools

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qpdftools.desktop  qpdftools.pro  qpdftools_en_US.ts  qpdftools_pt_BR.ts
.github/workflows/: aur.yml  build.yml  ccpp.yml  ppa.yml
debian/: changelog  control  copyright  dirs  postinst  postrm  qpdftools.install  rules  watch
debian/.debhelper/qpdftools/: dbgsym-build-ids
debian/.debhelper/qpdftools/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/qpdftools/dbgsym-root/usr/share/doc/: qpdftools-dbgsym
flatpak/: br.eng.silas.qpdftools.yml
languages/: qpdftools_pt_BR.ts
resources/: CMakeLists.txt  br.eng.silas.qpdftools.appdata.xml  br.eng.silas.qpdftools.desktop  br.eng.silas.qpdftools.metainfo.xml  fallback-icons.qrc  generateIcons.sh  io.github.silash35.qpdftools.appdata.xml  io.github.silash35.qpdftools.desktop  qpdftools.desktop
resources/fallback-icons/: fallback-icons.qrc
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  src.pro
src/api/: externalSoftware.cpp  externalSoftware.hpp  ghostscript.cpp  ghostscript.hpp  qpdf.cpp  qpdf.hpp  stapler.hpp
src/interface/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/interface/pages/: 0-menu.cpp  1-compress.cpp  2-split.cpp  3-merge.cpp  4-rotate.cpp
src/interface/pages/0-menu/: menu.cpp  menu.hpp  menu.ui
src/interface/pages/1-compress/: compress.cpp  compress.hpp  compress.ui
src/interface/pages/2-split/: split.cpp  split.hpp  split.ui
src/interface/pages/3-merge/: merge.cpp  merge.hpp  merge.ui
src/interface/pages/4-rotate/: rotate.cpp  rotate.hpp  rotate.ui
src/interface/utils/: fileDialog.cpp  fileDialog.hpp  globals.hpp
src/languages/: qpdftools_pt_BR.ts
src/utils/: lastDirectory.cpp  lastDirectory.hpp
